# place

./: msg
place-backend/: .dockerignore  Cargo.toml  Dockerfile
place-backend/src/: main.rs
place-frontend/: package.json
place-frontend/src/components/: header.tsx
place-frontend/src/pages/: _app.tsx  index.tsx
place-frontend/src/pages/api/auth/: [...nextauth].ts
