[package]
name = "place-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.2.0", features = [
    "add-extension",
    "compression-full",
] }
futures-util = "0.3.21"
anyhow = "1.0.57"

[dependencies.redis]
version = "0.21.5"
features = ["tokio-comp"]

[dependencies.axum]
version = "0.5.3"
features = ["ws"]
